--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
+            <div class="image-container"></div>
         </header>
         <section class="top-content">
-            <div class="image-container">
-            </div>
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
